welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:16: error: not found: value c
	setCouleurBrosse(c)
                         ^